chore: fix offer spacing

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -1220,6 +1220,16 @@ video {
   line-height: 1.75rem;
 }
 
+.tw-text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.tw-text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .tw-font-bold {
   font-weight: 700;
 }
@@ -1461,6 +1471,11 @@ video {
     padding-bottom: 7rem;
   }
 
+  .md\:tw-py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
   .md\:tw-pt-0 {
     padding-top: 0px;
   }
@@ -1516,6 +1531,11 @@ video {
   .lg\:tw-my-24 {
     margin-top: 6rem;
     margin-bottom: 6rem;
+  }
+
+  .lg\:tw-my-16 {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
   }
 
   .lg\:tw-min-h-\[520px\] {
